--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5
+        dotnet-version: 5.x
         # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
       run: dotnet publish BlazorTest/BlazorTest.csproj -c Release -o release --nologo
