--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish BlazorTest/BlazorTest.csproj -c Release -o release --nologo
+      run: dotnet publish HomeView/HomeView.csproj -c Release -o release --nologo
       
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
