--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deploy Blazor
 
 # Controls when the workflow will run
 on:
@@ -18,13 +18,19 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: 3.1.423-alpine3.16
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
+      
+       # Setup .NET Core SDK 6.0
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v3.0.1
+        with:
+          dotnet-version: 6.0
+        
       # Runs a single command using the runners shell
       - name: Publish .NET Core Project
         run: dotnet publish SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm.csproj -c Release -o release --nologo
