--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
       - name: Deploy to github pages wwwroot
         uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: SergioTenza.Blazor.Wasm\SergioTenza.Blazor.Wasm\bin\Release\net6.0\browser-wasm\publish\wwwroot
+          FOLDER: release\wwwroot
           
       
       
