--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,11 @@ jobs:
       # Runs a single command using the runners shell
       - name: Publish .NET Core Project
         run: dotnet publish SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm.csproj -c Release -o release --nologo
-
+      
+      # add .nojekyll file
+      - name : Add .nojekyll file
+        run: touch release/wwwroot/.nojekyll
+      
       # Deploy to github pages
       - name: Deploy to github pages wwwroot
         uses: JamesIves/github-pages-deploy-action@v4.4.0
