--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm.csproj
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm.csproj
@@ -13,6 +13,6 @@
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.9.3"/>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0"/>
     <PackageReference Include="System.Text.Json" Version="8.0.4"/>
-    <PackageReference Include="FluentEmail.Core" Version="3.0.2"/>
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
   </ItemGroup>
 </Project>
