--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/appsettings.json
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/appsettings.json
@@ -1,17 +1,19 @@
 {
-"Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "EmailSettings": {
+        "SmtpServer": "smtp.ionos.es",
+        "SmtpPort": 465,
+        "Subject": "Landing contact form",
+        "ToName": "TNZ Servicios Informaticos", 
+        "ToEmail": "info@tnzservicios.es",
+        "SmtpUsername": "info@tnzservicios.es",
+        "SmtpPassword": "",
+        "EnbaleSsl": true
     }
-  },
-   "EmailSettings": {
-    "MailServer": "smtp.example.com",
-    "MailPort": 587,
-    "SenderName": "Your Application",
-    "SenderEmail": "",
-    "Username": "",
-    "Password": ""
-  }
 }
