--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/appsettings.json
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/appsettings.json
@@ -6,14 +6,15 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "EmailSettings": {
-        "SmtpServer": "smtp.ionos.es",
-        "SmtpPort": 465,
-        "Subject": "Landing contact form",
-        "ToName": "TNZ Servicios Informaticos", 
-        "ToEmail": "info@tnzservicios.es",
-        "SmtpUsername": "info@tnzservicios.es",
-        "SmtpPassword": "",
-        "EnbaleSsl": true
-    }
+  "EmailSettings": {
+    "SmtpServer": "smtp.ionos.es",
+    "SmtpPort": 465,
+    "Subject": "Landing contact form",
+    "SendEmail": "stenza@tnzservicios.es",
+    "ToName": "TNZ Servicios Informaticos",
+    "ToEmail": "info@tnzservicios.es",
+    "SmtpUsername": "info@tnzservicios.es",
+    "SmtpPassword": "gatqWGMXrTn-7J:",
+    "EnableSsl": true
+  }
 }
