--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/appsettings.Development.json
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/appsettings.Development.json
@@ -1,19 +1,20 @@
 {
   "Logging": {
-      "LogLevel": {
-          "Default": "Information",
-          "Microsoft": "Warning",
-          "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   },
   "EmailSettings": {
-      "SmtpServer": "smtp.ionos.es",
-      "SmtpPort": 465,
-      "Subject": "Landing contact form",
-      "ToName": "TNZ Servicios Informaticos", 
-      "ToEmail": "info@tnzservicios.es",
-      "SmtpUsername": "info@tnzservicios.es",
-      "SmtpPassword": "",
-      "EnbaleSsl": true
+    "SmtpServer": "smtp.ionos.es",
+    "SmtpPort": 465,
+    "Subject": "Landing contact form",
+    "SendEmail": "stenza@tnzservicios.es",
+    "ToName": "TNZ Servicios Informaticos",
+    "ToEmail": "info@tnzservicios.es",
+    "SmtpUsername": "info@tnzservicios.es",
+    "SmtpPassword": "gatqWGMXrTn-7J:",
+    "EnableSsl": true
   }
 }
